
[package]
name = "commonware-avs-router"
version = "0.1.0"
edition = "2024"
[workspace]
members = [".", "scripts"]

[workspace.dependencies]
# Core dependencies shared across packages
alloy = { version = "1.0.31" }
commonware-eigenlayer = { git = "https://github.com/BreadchainCoop/commonware-avs-network-lookup", branch = "feat/update-dependencies" }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }

[dependencies]
# Workspace dependencies
alloy = { workspace = true }
alloy-primitives = "1.3.1"
alloy-provider = "1.0.31"
alloy-signer = "1.0.31"
alloy-signer-local = "1.0.31"
alloy-contract = "1.0.31"
anyhow = "1.0"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"

# Main package specific dependencies
async-trait = "0.1"
axum = "0.8.4"
bn254 = { git = "https://github.com/BreadchainCoop/bn254.git", branch = "feat/update-dependencies" }
bytes = "1.10.1"
clap = "4.5.37"
commonware-codec = "0.0.62"
commonware-cryptography = "0.0.62"
commonware-eigenlayer = { workspace = true }
commonware-macros = "0.0.62"
commonware-p2p = "0.0.62"
commonware-runtime = "0.0.62"
commonware-utils = "0.0.62"
dotenv = { workspace = true }
eigen-crypto-bls = "2.0.0"
eigen-crypto-bn254 = "2.0.0"
eigen-logging = "1.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
governor = "0.6.3"
hex = "0.4"
num-bigint = "0.4"
prometheus-client = "0.24.0"
prost = "0.14.1"
rand = "0.9.1"
serde = { workspace = true }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { workspace = true }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { workspace = true }

[build-dependencies]
prost-build = "0.14.1"
