[package]
name = "avs-scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "verify_increments"
path = "verify_increments.rs"

[[bin]]
name = "test_ingress"
path = "test_ingress.rs"

[dependencies]
alloy = { workspace = true }
tokio = { workspace = true }
commonware-eigenlayer = { workspace = true }
url = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
commonware-avs-router = { path = ".." }
